--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "lodash": "^4.17.3",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "reactstrap": "^3.9.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
