--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-addons-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
     "reactstrap": "^3.9.5",
     "redux": "^3.6.0",
     "uuid": "^3.0.1"
