--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "lodash": "^4.17.3",
+    "material-ui": "^0.16.6",
+    "moment": "^2.17.1",
     "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-addons-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-materialui-notifications": "^0.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
-    "reactstrap": "^3.9.5",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "uuid": "^3.0.1"
   },
