--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lodash": "^4.17.3",
     "material-ui": "^0.16.6",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
+    "react-bs-notifier": "^4.1.3",
     "react-dom": "^15.4.1",
     "react-materialui-notifications": "^0.4.1",
     "react-redux": "^5.0.1",
