--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-undo": "^0.6.1",
     "uuid": "^3.0.1"
   },
   "scripts": {
