--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "lodash": "^4.17.3",
     "material-ui": "^0.16.6",
     "react": "^15.4.1",
