--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-materialui-notifications": "^0.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-router-bootstrap": "^0.23.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-undo": "^0.6.1",
