--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
+    "es6-mapify": "^1.0.0",
     "lodash": "^4.17.3",
     "material-ui": "^0.16.6",
     "react": "^15.4.1",
