--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.4"
+    "deep-freeze": "0.0.1",
+    "enzyme": "^2.7.0",
+    "react-addons-test-utils": "^15.4.1",
+    "react-scripts": "0.8.4",
+    "redux-test-utils": "^0.1.1"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "es6-mapify": "^1.0.0",
     "lodash": "^4.17.3",
-    "material-ui": "^0.16.6",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-bs-notifier": "^4.1.3",
     "react-dom": "^15.4.1",
-    "react-materialui-notifications": "^0.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.23.1",
-    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-undo": "^0.6.1",
     "uuid": "^3.0.1"
