--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "es2016", "react"],
+  "presets": ["es2015", "es2016", "react", "stage-0"],
   "plugins": ["transform-object-rest-spread"]
 }
