--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-preset-stage-0": "^6.16.0",
     "deep-freeze": "0.0.1",
     "enzyme": "^2.7.0",
     "react-addons-test-utils": "^15.4.1",
