--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "deep-freeze": "0.0.1",
     "enzyme": "^2.7.0",
+    "protractor": "^4.0.14",
     "react-addons-test-utils": "^15.4.1",
     "react-scripts": "0.8.4",
     "redux-test-utils": "^0.1.1"
@@ -22,6 +23,8 @@
     "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.23.1",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-promise": "^0.5.3",
     "redux-undo": "^0.6.1",
     "uuid": "^3.0.1"
   },
