--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "es6-mapify": "^1.0.0",
+    "immutable": "^3.8.1",
     "lodash": "^4.17.3",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
