--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-router-bootstrap": "^0.23.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0",
     "redux-undo": "^0.6.1",
     "uuid": "^3.0.1"
   },
